@@ -6,6 +6,7 @@ ctags-5.4.1 (Sun Nov 24 2002)
   Bohlin [ASP].
 * Fixed problem with infinite loop in certain comments [PL/SQL, Bug #629115].
 * Fixed problem of incorrect extension field [C. Bug #639639].
+* Fixed problem of empty scoping extension field [C. Bug #639644].
 * Fixed man page errors and omissions.
 * Fixed bug in readFieldValue() in readtags library.
 
